[package]
name = "geocodio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
dotenv = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "1.8", features = ["full"] }