[package]
name = "geocodio"
authors = ["Wiley McKay Conte <wiley@populist.us>"]
description = "A client wrapper for the Geocodio API"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/populist-vote/geocodio"
documentation = "https://docs.rs/geocodio"
repository = "https://github.com/populist-vote/geocodio"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
dotenv = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "1.8", features = ["full"] }