[package]
name = "geocodio"
authors = ["Wiley McKay Conte <wiley@populist.us>"]
description = "A client wrapper for the Geocodio API"
license = "MIT/Apache-2.0"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/populist-vote/geocodio"
documentation = "https://docs.rs/geocodio"
repository = "https://github.com/populist-vote/geocodio"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.8", features = ["full"] }